# freeloader

./: .gitignore  AGENT.md  AGENTS.md  CODING_RULES.md  DESIGN_DOCS.md  FEATURE_STRUCTURE.md  LICENSE  MODEL_FEATURE_ARCHITECTURE.md  Makefile  PLAN.md  README.md  ROADMAP.md  TASK.md  plan-serviceProvidersModelFeature.prompt.md  pyproject.toml
.agentic/: agentic.yaml
.agentic/rules/: INDEX.md
.agentic/rules/local/: ARCHITECTURE.md  INDEX.md  PROJECT_PROFILE.md  REFACTORING.md
.agentic/rules/shared/: INDEX.md
.agentic/rules/shared/architecture/: BOUNDARIES.md  INDEX.md  (+2 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: AGENT.md  ARCHITECTURE_RULES_SUBSYSTEM.md  BLOCK_PORT_CONTRACTS.md  FEATURE_ARCHITECTURE.md  PROJECT_FEATURE.md  PROVISION_PLAN.md  _PROJECT_FEATURE.md  blocks.md  credentials.md  custom-blocks.md  hosts.md  pipeline.md  projects.md
docs/adr/: 0001-blocks-are-validated-terraform-definition-units.md
docs/block.old/: 03-BlockDefinition.md
src/freeloader/: TASK.md  __init__.py  cli.py  factory.py
src/freeloader/auth/: __init__.py
src/freeloader/block/: PROGRESS.md  PROGRESS_STEP_1.md  PROGRESS_STEP_2.md  PROGRESS_STEP_3.md  TASK.md  __init__.py  base.py  context.py  contract.py  facade.py  orchestrator.py  provisioner.py  runner.py
src/freeloader/block_clean/: PLAN.md  REFACTOR_STEP_1.md  REFACTOR_STEP_2.md  REFACTOR_STEP_3.md  REFACTOR_STEP_4.md
src/freeloader/blocks/: cli.py  factory.py  models.py  policies.py  registry.py  usecases.py
src/freeloader/credentials/: cli.py  factory.py  policies.py  refs.py  resolver.py  vault.py
src/freeloader/hosts/: cli.py  factory.py  models.py  policies.py  scanner.py  store.py  usecases.py
src/freeloader/pipeline/: cli.py  dag.py  factory.py  orchestrator.py  policies.py  progress.py
src/freeloader/project/: __init__.py  application.py  cli.py  domain.py  models.py
src/freeloader/project_clean/: PLAN.md
src/freeloader/projects/: cli.py  config.py  discovery.py  factory.py  models.py  policies.py  state.py
src/freeloader/secret/: cli.py  interface.py  use_cases.py  vault.py
src/freeloader/secrets/: REFACTOR.md  TASK.md  __init__.py  application.py  cli.py  models.py
src/freeloader/service_providers/: DESIGN.md  TASK.md  __init__.py  adapter.py  application.py  base.py  cli.py  facade.py  models.py  obtain.py  registry.py
src/freeloader/shared/: __init__.py  block.py  cmd.py  console.py  errors.py  paths.py  subprocess.py  types.py  utils.py  yaml_io.py
test_projects/project_npm/: freeloader.yaml  package.json  test.js
test_projects/project_pip/: freeloader.yaml
tests/: conftest.py  test_apply.py  test_architecture.py  test_block_clean_infrastructure.py  test_block_clean_queries.py  test_block_provisioner.py  test_blocks.py  test_cli.py  test_console_input_selector.py  test_console_progress.py  test_generate.py  test_hosts.py  test_init_project.py  test_project_feature.py  test_project_manifest_store.py  test_project_planner.py  test_providers.py  test_secrets.py  test_secrets_availability.py  test_secrets_feature.py  test_service_providers.py  test_service_providers_clean_application.py  test_service_providers_clean_authorize_service.py  test_service_providers_clean_billing_service.py  test_service_providers_clean_layers.py  test_service_providers_cli.py  test_service_providers_provider_drivers.py  test_status.py
tests/architecture_rules/: __init__.py  __main__.py  context.py  pipeline.py  registry.py  reporting.py  results.py
tests/architecture_rules/rules/: __init__.py  base.py  deep_relative_imports.py  domain_boundary.py  feature_isolation.py  layer_order.py  legacy_layers.py  package_surface.py  shared_independence.py  ui_import_surface.py
tmp/progress_passthrough/: pyproject.toml
(+414 files in other folders)
