[project]
name = "freeloader"
version = "0.1.0"
description = "Pipeline composer for indie developers"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "httpx>=0.28",
    "cryptography>=44.0",
    "python-hcl2>=5.0",
    "python-dotenv>=1.2.1",
    "eventsourcing>=9.5.3",
    "ruamel-yaml>=0.19.1",
    "python-gitlab>=8.0.0",
    "pygithub>=2.8.1",
    "coolipy>=0.0.8",
    "boto3>=1.42.54",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[project.scripts]
fl = "freeloader.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freeloader"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.workspace]
members = [
    ".test_projects/python/uv/django",
    ".test_projects/python/uv/django_project",
    ".test_projects/python/uv/flask_project",
    ".test_projects/python/uv/fastapi_project",
]
