[project]
name = "freeloader"
dynamic = ["version"]
description = "Compose deployment infrastructure from reusable Terraform-backed blocks."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "9orky" },
]
keywords = [
    "cli",
    "deployment",
    "devops",
    "infrastructure",
    "terraform",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "httpx>=0.28",
    "cryptography>=44.0",
    "python-hcl2>=5.0",
    "python-dotenv>=1.2.1",
    "eventsourcing>=9.5.3",
    "ruamel-yaml>=0.19.1",
    "python-gitlab>=8.0.0",
    "pygithub>=2.8.1",
    "coolipy>=0.0.8",
    "boto3>=1.42.54",
    "structlog>=25.5.0",
]

[project.urls]
Homepage = "https://github.com/9orky/freeloader"
Repository = "https://github.com/9orky/freeloader"
Issues = "https://github.com/9orky/freeloader/issues"
Documentation = "https://github.com/9orky/freeloader#readme"

[dependency-groups]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "twine>=6.0",
]

[project.scripts]
fl = "freeloader.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v?(?P<version>\\d+\\.\\d+\\.\\d+(?:[a-z]+\\d+)?)$"

[tool.hatch.build.targets.wheel]
packages = ["src/freeloader"]

[tool.hatch.build.targets.wheel.force-include]
"src/blocks" = "freeloader/blocks"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/uv.lock",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.workspace]
members = [
    ".test_projects/python/uv/django",
    ".test_projects/python/uv/django_project",
    ".test_projects/python/uv/flask_project",
    ".test_projects/python/uv/fastapi_project",
]
